# KI-base

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  doc_config.json  doc_config.json.bak  index.html  mkdocs.yml  publishing.md  pyproject.toml  sitemap.xml  smithery.yaml  test.txt
.agent/workflows/: create-adr.md  expand-knowledge.md  scaffold-knowledge.md  update-knowledge.md
.github/workflows/: docs.yml  publish.yml  tests.yml
decisions/: 000_adr_template.md
knowledge/: KI_knowledge_architecture.md  KI_knowledge_dependency_analysis.md  KI_knowledge_infra_scripts.md  KI_knowledge_infra_testing.md  KI_knowledge_mcp.md  KI_knowledge_ops.md  KI_knowledge_system.md  KI_knowledge_testing.md  KI_knowledge_testing_core.md  KI_knowledge_testing_scripts.md  KI_knowledge_workflows.md  KI_template.md
scripts/: add_ki_to_config.py  analyze_module.py  audit_coverage.py  generate_dir_index.py  init_ki_system.py  instructions.md  ki_dependency_analyzer.py  ki_utils.py  knowledge_engine.py  knowledge_mcp.py  sync_agents_md.py
search/: search_index.json
src/ki_manager/: __init__.py  server.py
tests/: conftest.py  init_ki_system.py  pytest.ini  test_analyze_module.py  test_audit_coverage.py  test_edge_cases.py  test_generate_dir_index.py  test_generate_ki_scaffolds.py  test_init_ki_system.py  test_ki_utils.py  test_knowledge_engine.py  test_knowledge_engine_extra.py  test_mcp_arguments.py  test_mcp_git.py  test_mcp_security.py  test_registry.py  test_sync_and_add_ki.py
workflows/: create-adr.md  expand-knowledge.md  sync-knowledge.md
(+13 files in other folders)
