[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ki-manager"
version = "2.0.6"
description = "Knowledge Item (KI) management MCP server for AI-assisted development"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["mcp", "knowledge", "ai", "documentation", "cursor", "windsurf", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ki-manager = "ki_manager.server:main"

[project.urls]
Homepage = "https://github.com/Laeryid/KI-base"
Repository = "https://github.com/Laeryid/KI-base"
Issues = "https://github.com/Laeryid/KI-base/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ki_manager"]

[tool.hatch.build.targets.sdist]
include = ["src/ki_manager/**", "README.md", "LICENSE"]
